--- a/MiniGames/MiniGames.csproj
+++ b/MiniGames/MiniGames.csproj
@@ -70,6 +70,9 @@
         <EmbeddedResource Include="Form1.resx">
           <DependentUpon>Form1.cs</DependentUpon>
         </EmbeddedResource>
+        <EmbeddedResource Include="Platformer.resx">
+          <DependentUpon>Platformer.cs</DependentUpon>
+        </EmbeddedResource>
         <EmbeddedResource Include="Pong.resx">
           <DependentUpon>Pong.cs</DependentUpon>
         </EmbeddedResource>
