--- a/MiniGames/MiniGames.csproj
+++ b/MiniGames/MiniGames.csproj
@@ -113,11 +113,14 @@
       <Content Include="Resources\cropRat.gif" />
       <Content Include="Resources\dancing_squirrel.gif" />
       <Content Include="Resources\goodCheese.png" />
+      <Content Include="Resources\heart_pixel_art_254x254.png" />
       <Content Include="Resources\night_city.gif" />
       <Content Include="Resources\NNZthjY.jpeg" />
       <Content Include="Resources\rat.gif" />
       <Content Include="Resources\reverseCropRat.gif" />
+      <Content Include="Resources\_200_2009833_swiss_cheese_slice_pixel_art_swiss_cheese_pixel_art.png" />
       <Content Include="Resources\_5214_dancing_sphynx_cat.gif" />
+      <Content Include="Resources\_542_5427076_colors_download_settings_cat_pixel_art.png" />
     </ItemGroup>
     <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
