feat : change pipes pictures

--- a/MiniGames/MiniGames.csproj
+++ b/MiniGames/MiniGames.csproj
@@ -116,6 +116,7 @@
       <Content Include="Resources\heart_pixel_art_254x254.png" />
       <Content Include="Resources\night_city.gif" />
       <Content Include="Resources\NNZthjY.jpeg" />
+      <Content Include="Resources\pipe.png" />
       <Content Include="Resources\rat.gif" />
       <Content Include="Resources\reverseCropRat.gif" />
       <Content Include="Resources\_200_2009833_swiss_cheese_slice_pixel_art_swiss_cheese_pixel_art.png" />
