feat : change mocing bloc height

--- a/MiniGames/MiniGames.csproj
+++ b/MiniGames/MiniGames.csproj
@@ -117,7 +117,10 @@
       <Content Include="Resources\night_city.gif" />
       <Content Include="Resources\NNZthjY.jpeg" />
       <Content Include="Resources\pipe.png" />
+      <Content Include="Resources\pipeBrown.png" />
       <Content Include="Resources\rat.gif" />
+      <Content Include="Resources\ratBrown.png" />
+      <Content Include="Resources\ratBrownReverse.png" />
       <Content Include="Resources\reverseCropRat.gif" />
       <Content Include="Resources\_200_2009833_swiss_cheese_slice_pixel_art_swiss_cheese_pixel_art.png" />
       <Content Include="Resources\_5214_dancing_sphynx_cat.gif" />
